--- a/webs.tex
+++ b/webs.tex
@@ -1,8 +1,9 @@
 \documentclass[11pt,leqno]{article}
 
-\usepackage[all]{xy}
-%\usepackage{amsmath,amssymb}
 \input{preamble}
+
+%\tikzexternalize[prefix=diagrams/externalized/]
+
 
 \title{something about webs and skew Howe duality}
 \author{Sabin~Cautis, Joel~Kamnitzer and Scott~Morrison}
@@ -90,8 +91,6 @@ Next, we find that we can explicitly describe the kernel of $\Ugl{m}$ acting on 
 
 \section{Web diagrams and relations}
 \label{sec:diagrams}
-\tikzstyle{mid>}=[decoration={markings, mark=at position 0.5 with {\arrow{>}}}, postaction={decorate}]
-\tikzstyle{mid<}=[decoration={markings, mark=at position 0.5 with {\arrow{<}}}, postaction={decorate}]
 
 The free spider category $FSp(SL_n)$ has as objects sequences $\ul{k}$ in $\{1^\pm,\ldots,(n-1)^\pm\}$, and as morphisms (linear combinations of) oriented planar graphs locally modeled on the following four types of vertices:
 \newcommand{\fuse}[3]{\tikz[baseline=0.5cm]{
@@ -619,30 +618,54 @@ The functor $\Lad_n^m \to Sp(SL_n)^+$ is surjective.
 \end{thm}
 \begin{proof}
 Given any diagrammatic morphism $D \in Sp(SL_n)^+$, just by a planar isotopy we can write it as
-\begin{equation*}
-\begin{tikzpicture}
-\draw (0,0) -- (0,3);
-\draw (1,0) -- (1,3);
-\draw (3,0) -- (3,3);
-\draw[fill=white] (-1,1) rectangle (4,2);
-\node at (1.5,1.5) {$D$};
+\begin{align*}
+\begin{tikzpicture}[baseline=12]
+\coordinate (a) at (0,0);
+\coordinate (b) at (2,1.5);
+\foreach \n/\x in {1/0.25,2/0.75, 3/1.25, 4/1.75} {
+ \draw (\x,-0.4) coordinate (b\n) -- (\x, 1.9) coordinate (t\n);
+}
+\draw[fill=white] (a) rectangle (b);
+\node at ($(a)!.5!(b)$) {$D$};
 \end{tikzpicture}
-=
-\begin{tikzpicture}
-\draw(0,0) -- (1,1.4);
-\draw(1,0) -- (1,1.3);
-\draw(3,0) -- (1,1.1);
-\draw[fill=white] (4,1) rectangle (7,2);
-\node at (5.5,1.5) {$D_2$};
+&\;=\;
+\begin{tikzpicture}[baseline=12]
+\foreach \n/\x in {1/0.25,2/0.75, 3/1.25, 4/1.75} {
+ \draw (\x,-0.4) coordinate (b\n) -- (\x, 1.9) coordinate (t\n);
+}
+\draw[fill=white] (a) rectangle node {$D_1$} (b);
+\foreach \y in {0.6, 0.45, 0.3, 0.15} {
+ \draw  (2,\y) -- (2.4, \y);
+ \draw  (2,1.5-\y) -- (2.4, 1.5-\y);
+}
+\draw[fill=white] (2.4,0) rectangle node {$D_2$} (4.4,1.5);
 \end{tikzpicture}
-\end{equation*}
-where $D_2$ is in Morse position relative to the $x$-coordinate. (That is, no two critical $x$-values or $x$-coordinates of vertices coincide.)
+\end{align*}
+where $
+D_1  = 
+\begin{tikzpicture}[baseline=7.5,x=0.5cm,y=0.5cm]
+\foreach \n/\x/\y in {1/0.25/0.6,2/0.75/0.45, 3/1.25/0.3, 4/1.75/0.15} {
+ \coordinate (b\n)  at  (\x, -0.4);
+ \draw[mid>] (b\n) to[out=90,in=180] (2.2,\y);
+ \coordinate (t\n) at (\x, 1.9) ;
+ \draw[mid<] (t\n) to[out=-90,in=180] (2.2,1.5-\y);
+}
+\end{tikzpicture}
+$ and $D_2$ is in Morse position relative to the $x$-coordinate (that is, no two critical $x$-values or $x$-coordinates of vertices coincide) and each trivalent vertex has two edges pointing to the left and one to the right (this can always be achieved at the expense of extra critical $x$-values in the strings). 
 
 Now replace $D_1$ with
 \begin{equation*}
-E_1 = ...
+E_1 = \begin{tikzpicture}[baseline=15,x=1.5cm, y=1.5cm]
+\foreach \n/\x/\y in {1/0.25/0.6,2/0.75/0.45, 3/1.25/0.3, 4/1.75/0.15} {
+ \coordinate (b\n)  at  (\x, -0.4);
+ \draw[lower>, upper>] (b\n) to[out=90,in=180] coordinate (mb\n) (2.2,\y);
+ \coordinate (t\n) at (\x, 1.9) ;
+ \draw[lower<, upper<] (t\n) to[out=-90,in=180] coordinate (mt\n) (2.2,1.5-\y);
+ \draw[dashed,mid>] (mb\n) --node[left=0.2pt] {\small $0$} (mt\n);
+}
+\end{tikzpicture}
 \end{equation*}
-Next, to the right of each element piece of the Morse decomposition of $D_2$, superimpose either a vertical $0$ strand or a vertical $n$ strand as follows
+Next, to the right of each elementary piece of the Morse decomposition of $D_2$, superimpose either a vertical $0$ strand or a vertical $n$ strand as follows
 \begin{align*}
 ...
 \end{align*}
@@ -674,14 +697,64 @@ Then make the following local replacements
 \draw[mid<] (0,-0.2) --node[below] {$a$} (1,-0.2);
 \draw[mid>,dashed]  (0,-1) -- (0,-0.2);
 \draw[dashed] (0,0.2) --node[right] {0} (0,1);
+} \\\\
+\tikz[baseline=6]{
+\draw[mid>] (-1,0.5) to[out=0,in=0] node[right] {$a$} (-1,-0.5);
+\draw[mid>, dashed] (0,-1) --node[right] {$n$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>, dashed] (0,-1) --node[right] {$n$} (0,-0.5);
+\draw[mid>] (0,-0.5) --node[right] {$n-a$} (0,0.5);
+\draw[mid>, dashed] (0,0.5) --node[right] {$n$} (0,1);
+\draw[mid>] (-1,0.5) --node[above] {$a$} (0,0.5);
+\draw[mid<] (-1,-0.5) --node[below] {$a$} (0,-0.5);
 }
+&
+\tikz[baseline=6]{
+\draw[mid<] (-1,0.5) to[out=0,in=0] node[right] {$a$} (-1,-0.5);
+\draw[mid>, dashed] (0,-1) --node[right] {$0$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>, dashed] (0,-1) --node[right] {$0$} (0,-0.5);
+\draw[mid>] (0,-0.5) --node[right] {$a$} (0,0.5);
+\draw[mid>, dashed] (0,0.5) --node[right] {$0$} (0,1);
+\draw[mid<] (-1,0.5) --node[above] {$a$} (0,0.5);
+\draw[mid>] (-1,-0.5) --node[below] {$a$} (0,-0.5);
+}
+\\\\
+\tikz[baseline=6]{
+\draw[mid>] (1,0.5) to[out=180,in=180] node[right] {$a$} (1,-0.5);
+\draw[mid>, dashed] (0,-1) --node[right] {$n$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>, dashed] (0,-1) --node[left] {$n$} (0,-0.5);
+\draw[mid>] (0,-0.5) --node[left] {$n-a$} (0,0.5);
+\draw[mid>, dashed] (0,0.5) --node[left] {$n$} (0,1);
+\draw[mid>] (1,0.5) --node[above] {$a$} (0,0.5);
+\draw[mid<] (1,-0.5) --node[below] {$a$} (0,-0.5);
+}
+&
+\tikz[baseline=6]{
+\draw[mid<] (1,0.5) to[out=180,in=180] node[right] {$a$} (1,-0.5);
+\draw[mid>, dashed] (0,-1) --node[right] {$0$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>, dashed] (0,-1) --node[left] {$0$} (0,-0.5);
+\draw[mid>] (0,-0.5) --node[left] {$a$} (0,0.5);
+\draw[mid>, dashed] (0,0.5) --node[left] {$0$} (0,1);
+\draw[mid<] (1,0.5) --node[above] {$a$} (0,0.5);
+\draw[mid>] (1,-0.5) --node[below] {$a$} (0,-0.5);
+}
+\\\\
+\tikz[baseline=6]{
+\draw[mid>] (-1,0.5) node[left] {$a$} -- (-0.5,0);
+\draw[mid>] (-1,-0.5) node[left] {$b$}-- (-0.5,0);
+\draw[upper>] (-0.5,0) -- (1,0) node[right] {$a+b$};
+\draw[dashed,lower>] (0,-1) -- (0,1);
+}
+& \mapsto \cdots
 \end{align*}
-\begin{align*}
-\begin{tikzpicture}
-\end{tikzpicture}
-\end{align*}
-to obtain $E_2$.
-
+to obtain $E_2$. \todo{continue}
 It is clear that $D$ is equivalent in $Sp(SL_n)^+$ to $E_1 E_2$ which is a ladder diagram.
 \end{proof}
 
